--- a/include/css/style.css
+++ b/include/css/style.css
@@ -1815,7 +1815,7 @@ h2.rv_name {
   left: -100%;
   width: 100%;
   height: 100%;
-  background: #f7f7f7;
+  background: #c5b9ab;
   transition: left 0.5s ease, opacity 0.7s ease;
   opacity: 0;
 }
