--- a/include/css/style.css
+++ b/include/css/style.css
@@ -756,9 +756,20 @@ ul:not([class]) > li:last-child {
 .Linklist__Item a {
   color: #fff;
 }
+.MegaMenu__PushImageWrapper {
+  overflow: hidden;
+}
+.MegaMenu__PushImageWrapper:hover img {
+  transform: scale(1.2);
+}
+
 .MegaMenu__PushImageWrapper img {
   height: 300px;
   width: 300px;
+  object-fit: cover;
+  transform: scale(1);
+  transition: opacity 0.3s ease,
+    transform 8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 .MegaMenu {
