--- a/include/css/style.css
+++ b/include/css/style.css
@@ -435,7 +435,7 @@ main {
 /* =================reset css ends here================= */
 /* =================core css starts here================= */
 body {
-  padding-top: 100px;
+  padding-top: 137px;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -646,7 +646,8 @@ ul:not([class]) > li:last-child {
 /* ================= Header Start ================= */
 #header {
   color: #333;
-  background: #fff;
+  /* background: #fff; */
+  background: #eae8e2;
   /* background-color: #0000001a; */
   position: fixed;
   left: 0;
@@ -680,7 +681,7 @@ ul:not([class]) > li:last-child {
   /* height: 100px; */
 }
 .navbar-brand {
-  width: 110px;
+  width: 150px;
   padding: 0;
   margin: 0;
   position: relative;
@@ -700,6 +701,8 @@ ul:not([class]) > li:last-child {
   color: #333;
   padding: 0;
   margin: 0;
+  font-family: Barlow, sans-serif !important;
+
 }
 .navbar-expand-xl .navbar-nav .nav-link:after {
   background: #9f664a;
@@ -752,7 +755,8 @@ ul:not([class]) > li:last-child {
 /* =========================================== offer after header ================================================ */
 .desktop-content {
   width: 100%;
-  /* margin-top: 9px; */
+  border-top: 1px dashed #b2a389;
+  border-bottom: 1px dashed #b2a389;
 }
 
 .parsys_column-content {
@@ -771,7 +775,7 @@ ul:not([class]) > li:last-child {
   font-family: Barlow, sans-serif !important;
   font-size: 14px;
   font-weight: 500;
-  color: #ffffff;
+  color: #333;
   letter-spacing: 0.5px;
 }
 
@@ -779,8 +783,8 @@ ul:not([class]) > li:last-child {
   width: 100%;
 }
 .border-column {
-  border-left: 1px solid #fff;
-  border-right: 1px solid #fff;
+  border-left: 1px solid #b2a389;
+  border-right: 1px solid #b2a389;
 }
 /* =================================== mega menu ======================================= */
 .navbar-expand-xl .navbar-nav .nav-item:hover .MegaMenu {
@@ -923,6 +927,7 @@ ul:not([class]) > li:last-child {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); */
+  display: none;
   background: #fff;
   height: 40px;
   border-radius: 40px;
@@ -1195,10 +1200,10 @@ ul:not([class]) > li:last-child {
 .header-top {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   /* border-bottom: 1px solid #fff; */
   position: relative;
-  padding: 20px 0 0px;
+  padding: 20px 0 20px;
 }
 .fixed .header-top,
 #header:hover .header-top {
@@ -4820,10 +4825,10 @@ h2.rv_name {
     display: block !important;
     transition: all 0.3s cubic-bezier(0.77, 0.2, 0.05, 1);
   }
-  .fixed .navbar-collapse,
+  /* .fixed .navbar-collapse,
   .fixed .navbar-collapse.collapsing {
     background: #efeeea;
-  }
+  } */
   .navbar-expand-xl .navbar-nav .nav-link {
     color: #fff !important;
   }
@@ -5172,6 +5177,12 @@ h2.rv_name {
   }
   .header-top {
     padding: 0;
+  }
+  .header-top {
+    justify-content: flex-start;
+  }
+  .navbar-brand {
+    width: 110px;
   }
   .parsys_column2-content,
   .hero-bg-half-content,
